# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg
brain_games/: __init__.py  cli.py  engine.py  even.py  functions.py
brain_games/games/: calc.py  drive.py  even.py  gcd.py  prime.py  progress.py  run.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
