[tool.poetry]
name = "charadri_brain_games"
version = "0.6.6"
description = "CLI mini-games"
classifiers = [
 "Development Status :: 3 - Alpha",
 "Environment :: Console",
 "Programming Language :: Python :: 3",
 "Operating System :: POSIX :: Linux"
]
authors = ["charadri <kirillkulikov307@gmail.com>"]
repository = "https://github.com/charadri/python-project-lvl1.git"
packages = [
 { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
